--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -79,7 +79,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-area="" asp-controller="LoaiPhanMems" asp-action="Index" class="nav-link">
+                            <a asp-area="" asp-controller="BaoCao" asp-action="DoanTheoNgayDi" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Đoàn Theo Ngày đi tour</p>
                             </a>
