--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -85,7 +85,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-area="" asp-controller="LoaiPhanMems" asp-action="Index" class="nav-link">
+                            <a asp-area="" asp-controller="BaoCao" asp-action="TuyentqTheoNgayDi" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Tuyến tham quan theo ngày đi tour</p>
                             </a>
