--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -91,7 +91,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-area="" asp-controller="LoaiPhanMems" asp-action="Index" class="nav-link">
+                            <a asp-area="" asp-controller="BaoCao" asp-action="TuyentqTheoQuy" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Tuyến tham quan theo quý</p>
                             </a>
