Khach le he thong

--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-area="" asp-controller="LoaiPhanMems" asp-action="Index" class="nav-link">
+                            <a asp-area="" asp-controller="BaoCao" asp-action="KhachLeHeThong" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Quầy khách lẽ toàn hệ thống</p>
                             </a>
