--- a/ThongKe/Views/BaoCao/KhachHuy.cshtml
+++ b/ThongKe/Views/BaoCao/KhachHuy.cshtml
@@ -148,7 +148,14 @@
                             <td>@Html.DisplayFor(m => item.tuyentq)</td>
                             <td>@Html.Raw(item.batdau.ToString("dd/MM/yyyy"))</td>
                             <td>@Html.Raw(item.ketthuc.ToString("dd/MM/yyyy"))</td>
-                            <td>@Html.Raw(item.giatour.ToString("N0"))</td>
+                            @if (item.giatour.HasValue)
+                            {
+                                <td>@Html.Raw(item.giatour.Value.ToString("N0"))</td>
+                            }
+                            else
+                            {
+                                <td>0</td>
+                            }
                             <td>@Html.DisplayFor(m => item.nguoihuyve)</td>
                             <td>@Html.DisplayFor(m => item.dailyhuyve)</td>
                             <td>@Html.DisplayFor(m => item.chinhanh)</td>
