--- a/ThongKe/Views/Shared/_Layout.cshtml
+++ b/ThongKe/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <div class="wrapper">
         <!-- Navbar -->
 
-        <nav class="main-header navbar navbar-expand navbar-dark navbar-gray-dark">
+        <nav class="main-header navbar navbar-expand navbar-dark navbar-primary">
 
             <!-- Left navbar links -->
             <ul class="navbar-nav">
@@ -37,8 +37,8 @@
                     <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
                 </li>
                 @*<li class="nav-item d-none d-sm-inline-block">
-                        <a asp-action="Register" asp-controller="Accounts" class="nav-link">Register</a>
-                    </li>*@
+                <a asp-action="Register" asp-controller="Accounts" class="nav-link">Register</a>
+            </li>*@
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="#" class="nav-link">Contact</a>
                 </li>
@@ -46,15 +46,15 @@
 
             <!-- SEARCH FORM -->
             @*<form class="form-inline ml-3">
-                    <div class="input-group input-group-sm">
-                        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                        <div class="input-group-append">
-                            <button class="btn btn-navbar" type="submit">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>*@
+            <div class="input-group input-group-sm">
+                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <div class="input-group-append">
+                    <button class="btn btn-navbar" type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </div>
+        </form>*@
 
             <!-- Right navbar links -->
 
