--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -3,12 +3,13 @@
 <aside class="main-sidebar sidebar-dark-navy elevation-4">
 
     <!-- Brand Logo -->
-    <a href="~/lib/index3.html" class="brand-link">
-        <img src="~/lib/dist/img/AdminLTELogo.png"
+    <a href="~/lib/index3.html" class="brand-link navbar-primary">
+        <img src="~/Images/LogoLeft.ico"
              alt="AdminLTE Logo"
              class="brand-image img-circle elevation-3"
              style="opacity: .8">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
+        @*<span class="text-white font-weight-light">Saigontourist</span>*@
+    <img src="~/Images/saigontourist.png" />
     </a>
 
     <!-- Sidebar -->
@@ -16,10 +17,11 @@
         <!-- Sidebar user (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="~/lib/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                @*<img src="~/lib/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">*@
+                <i class="fas fa-user-circle text-green fa-3x"></i>
             </div>
             <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
+                <a href="#" class="d-block">Online</a>
             </div>
         </div>
 
@@ -29,7 +31,7 @@
                 <!-- Add icons to the links using the .nav-icon class
                 with font-awesome or any other icon font library -->
                 <li class="nav-item has-treeview">
-                    <a href="#" class="nav-link">
+                    <a asp-controller="Users" asp-action="Index" class="nav-link">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>
                             Tài khoản
