--- a/ThongKe/Views/BaoCao/DoanTheoNgayDi.cshtml
+++ b/ThongKe/Views/BaoCao/DoanTheoNgayDi.cshtml
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Doanh Thu Đoàn Theo Ngày Đi Tour</h1>
+                <h1>BÁO CÁO DOANH THU ĐOÀN THEO NGÀY ĐI TOUR</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -41,40 +41,33 @@
                 <div class="p-4 border rounded">
 
                     <div class="form-group row">
-                        <div class="col-1">
-                            <label>Từ ngày</label>
-                        </div>
+                       
                         <div class="col-2">
+                            Từ ngày
                             <input value="@ViewBag.searchFromDate" name="tungay" class="form-control maskInput" id="txtTuNgay" />
                         </div>
 
-                        <div class="col-1">
-                            <label>Đến ngày</label>
-                        </div>
                         <div class="col-2">
+                            Đến ngày
                             <input value="@ViewBag.searchToDate" name="denngay" class="form-control maskInput" id="txtDenNgay" />
                         </div>
 
-
-                        <div class="col-1">
-                            <label>Code CN</label>
-                        </div>
                         <div class="col-2">
+                            Code CN
                             <select name="chiNhanh" class="form-control border-input ddlChiNhanh" id="ddlChiNhanh"
                                     asp-items="@(new SelectList(Model.chiNhanhToReturnViewModels,"Name","Name", ViewBag.chiNhanh))">
                             </select>
                         </div>
 
-                        <div class="col-1">
-                            <label>Khối</label>
-                        </div>
-                        <div class="col-1">
+                        <div class="col-2">
+                            Khối
                             <select class="form-control" id="ddlKhoi" name="khoi"
                                     asp-items="@(new SelectList(Model.khoiViewModels, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-2">
+                            <br />
                             <span class="btn-group">
                                 <button type="submit" id="btnSearch" class="btn btn-outline-primary" formaction="/BaoCao/DoanTheoNgayDi"><i class="fa fa-search"></i></button>
                                 <button type="submit" id="btnExportAll1" class="btn btn-outline-success" formmethod="post" formaction="/BaoCao/DoanTheoNgayDiPost"><i class="fas fa-file-export"></i></button>
@@ -114,8 +107,8 @@
             </div>
         </div>
         <div class="card-body">
-            <div>
-                <table class="table table-striped border" id="listAll">
+            <div style="overflow-x:auto;">
+                <table class="table mytable text-nowrap" id="listAll">
                     <thead>
                         <tr class="table-info">
                             <th>#</th>
@@ -138,9 +131,9 @@
                                     <td>
 
                                         <form id="frmDetail" asp-action="DoanTheoNgayDiChiTietToExcel">
-                                            <input type="hidden" name="sgtcode" id="hidSgtcode" />
-                                            <input type="hidden" name="khoi" id="hidKhoi" />
-                                            <button type="button" data-sgtcode="@item.Sgtcode" class="btn btn-outline-success btnExportDetail"><i class="fas fa-file-export"></i></button>
+                                            <input type="hidden" name="sgtcode" id="hidSgtcode" value="@item.Sgtcode" />
+                                            <input type="hidden" name="khoi" id="hidKhoi" value="@Model.Khoi" />
+                                            <button type="submit" class="btn btn-outline-success btnExportDetail"><i class="fas fa-file-export"></i></button>
 
                                         </form>
                                     </td>
@@ -195,5 +188,5 @@
         });
     </script>
 
-    <script src="~/Admin/DoanTheoNgayDi/doanNgayDiController.js"></script>
+    @*<script src="~/Admin/DoanTheoNgayDi/doanNgayDiController.js"></script>*@
 }
