--- a/ThongKe/Views/BaoCao/SaleTheoQuay.cshtml
+++ b/ThongKe/Views/BaoCao/SaleTheoQuay.cshtml
@@ -9,7 +9,7 @@
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">Sale theo ngày bán</li>
+                    <li class="breadcrumb-item active">BÁO CÁO DOANH THU SALES THEO NGÀY BÁN</li>
                 </ol>
             </div>
         </div>
@@ -41,40 +41,33 @@
                 <div class="p-4 border rounded">
 
                     <div class="form-group row">
-                        <div class="col-1">
-                            <label>Từ ngày</label>
-                        </div>
+                        
                         <div class="col-2">
+                            Từ ngày
                             <input value="@ViewBag.searchFromDate" name="tungay" class="form-control maskInput" id="txtTuNgay" />
                         </div>
 
-                        <div class="col-1">
-                            <label>Đến ngày</label>
-                        </div>
                         <div class="col-2">
+                            Đến ngày
                             <input value="@ViewBag.searchToDate" name="denngay" class="form-control maskInput" id="txtDenNgay" />
                         </div>
 
-
-                        <div class="col-1">
-                            <label>Chi nhánh</label>
-                        </div>
                         <div class="col-2">
+                            Chi nhánh
                             <select name="chiNhanh" class="form-control border-input ddlChiNhanh" id="ddlChiNhanh"
                                     asp-items="@(new SelectList(Model.chiNhanhToReturnViewModels,"Name","Name", ViewBag.chiNhanh))">
                             </select>
                         </div>
 
-                        <div class="col-1">
-                            <label>Khối</label>
-                        </div>
-                        <div class="col-1">
+                        <div class="col-2">
+                            Khối
                             <select class="form-control" id="ddlKhoi" name="khoi"
-                                asp-items="@(new SelectList(Model.khoiViewModels, "Name", "Name", ViewBag.khoi))">
+                                    asp-items="@(new SelectList(Model.khoiViewModels, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-2">
+                            <br />
                             <span class="btn-group">
                                 <button type="submit" id="btnSearch" class="btn btn-outline-primary" formaction="/BaoCao/SaleTheoQuay"><i class="fa fa-search"></i></button>
                                 <button type="submit" id="btnExportAll1" class="btn btn-outline-success" formmethod="post" formaction="/BaoCao/SaleTheoQuayPost"><i class="fas fa-file-export"></i></button>
@@ -114,8 +107,8 @@
             </div>
         </div>
         <div class="card-body">
-            <div>
-                <table class="table table-striped border" id="listAll">
+            <div style="overflow-x:auto;">
+                <table class="table mytable text-nowrap" id="listAll">
                     <thead>
                         <tr class="table-info">
                             <th>#</th>
@@ -136,12 +129,12 @@
                                     <td>
 
                                         <form id="frmDetail" asp-action="SaleTheoQuayChiTietToExcel">
-                                            <input type="hidden" name="tungay" id="hidTuNgay" />
-                                            <input type="hidden" name="denngay" id="hidDenNgay" />
-                                            <input type="hidden" name="nhanvien" id="hidNhanVien" />
-                                            <input type="hidden" name="chinhanh" id="hidChiNhanh" />
-                                            <input type="hidden" name="khoi" id="hidKhoi" />
-                                            <button type="button" data-nhanvien="@item.Nguoixuatve" data-chinhanh="@item.Chinhanh" class="btn btn-outline btn-success btnExportDetail"><i class="fas fa-file-export"></i></button>
+                                            <input type="hidden" name="tungay" id="hidTuNgay" value="@Model.TuNgay" />
+                                            <input type="hidden" name="denngay" id="hidDenNgay" value="@Model.DenNgay" />
+                                            <input type="hidden" name="nhanvien" id="hidNhanVien" value="@item.Nguoixuatve" />
+                                            <input type="hidden" name="chinhanh" id="hidChiNhanh" value="@item.Chinhanh" />
+                                            <input type="hidden" name="khoi" id="hidKhoi" value="@Model.Khoi" />
+                                            <button type="submit" class="btn btn-outline-success btnExportDetail"><i class="fas fa-file-export"></i></button>
 
                                         </form>
                                     </td>
@@ -193,5 +186,5 @@
             "autoWidth": false,
         });
     </script>
-    <script src="~/Admin/SaleTheoQuay/saleTheoQuayController.js"></script>
+    @*<script src="~/Admin/SaleTheoQuay/saleTheoQuayController.js"></script>*@
 }
