--- a/ThongKe/Views/BaoCao/SaleTheoTuyenThamQuan.cshtml
+++ b/ThongKe/Views/BaoCao/SaleTheoTuyenThamQuan.cshtml
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Sale theo tuyến tham quan</h1>
+                <h1>BÁO CÁO DOANH THU THEO TUYẾN THAM QUAN</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -41,33 +41,26 @@
                 <div class="p-4 border rounded">
 
                     <div class="form-group row">
-                        <div class="col-1">
-                            <label>Từ ngày</label>
-                        </div>
+                       
                         <div class="col-2">
+                            Từ ngày
                             <input value="@ViewBag.searchFromDate" name="tungay" class="form-control maskInput" id="txtTuNgay" />
                         </div>
 
-                        <div class="col-1">
-                            <label>Đến ngày</label>
-                        </div>
                         <div class="col-2">
+                            Đến ngày
                             <input value="@ViewBag.searchToDate" name="denngay" class="form-control maskInput" id="txtDenNgay" />
                         </div>
 
-                        <div class="col-1">
-                            <label>Khối</label>
-                        </div>
-                        <div class="col-1">
+                        <div class="col-2">
+                            Khối
                             <select class="form-control" id="ddlKhoi" name="khoi"
-                                asp-items="@(new SelectList(Model.khoiViewModels, "Name", "Name", ViewBag.khoi))">
+                                    asp-items="@(new SelectList(Model.khoiViewModels, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
 
-                        <div class="col-1">
-                            <label>Tuyến tham quan</label>
-                        </div>
                         <div class="col-2">
+                            Tuyến tham quan
                             <select name="tuyentq" class="form-control border-input " id="ddlTuyentq"
                                     asp-items="@(new SelectList(Model.tuyenThamQuanViewModels,"tuyentq","tuyentq", ViewBag.ttq))">
                             </select>
@@ -76,6 +69,7 @@
 
 
                         <div class="col-1">
+                            <br />
                             <span class="btn-group">
                                 <button type="submit" id="btnSearch" class="btn btn-outline-primary" formaction="/BaoCao/SaleTheoTuyenThamQuan"><i class="fa fa-search"></i></button>
                                 <button type="submit" id="btnExportAll1" class="btn btn-outline-success" formmethod="post" formaction="/BaoCao/SaleTheoTuyenThamQuanPost"><i class="fas fa-file-export"></i></button>
@@ -115,8 +109,8 @@
             </div>
         </div>
         <div class="card-body">
-            <div>
-                <table class="table table-striped border" id="listAll">
+            <div style="overflow-x:auto;">
+                <table class="table mytable text-nowrap" id="listAll">
                     <thead>
                         <tr class="table-info">
                             <th>#</th>
@@ -134,27 +128,27 @@
                         {
                             @foreach (var item in Model.DoanhthuSaleTuyens)
                             {
-                        <tr>
-                            <td>
+                                <tr>
+                                    <td>
 
-                                <form id="frmDetail" asp-action="SaleTheoTuyenThamQuanChiTietToExcel">
-                                    <input type="hidden" name="tungay" id="hidTuNgay" />
-                                    <input type="hidden" name="denngay" id="hidDenNgay" />
-                                    <input type="hidden" name="nhanvien" id="hidNhanVien" />
-                                    <input type="hidden" name="tuyentq" id="hidTuyentq" />
-                                    <input type="hidden" name="khoi" id="hidKhoi" />
-                                    <button type="button" data-nhanvien="@item.Nguoixuatve" data-tuyentq="@item.Tuyentq" class="btn btn-outline btn-success btnExportDetail"><i class="fas fa-file-export"></i></button>
+                                        <form id="frmDetail" asp-action="SaleTheoTuyenThamQuanChiTietToExcel">
+                                            <input type="hidden" name="tungay" id="hidTuNgay" value="@Model.TuNgay" />
+                                            <input type="hidden" name="denngay" id="hidDenNgay" value="@Model.DenNgay" />
+                                            <input type="hidden" name="nhanvien" id="hidNhanVien" value="@item.Nguoixuatve" />
+                                            <input type="hidden" name="tuyentq" id="hidTuyentq" value="@item.Tuyentq" />
+                                            <input type="hidden" name="khoi" id="hidKhoi" value="@Model.Khoi" />
+                                            <button type="submit" class="btn btn-outline-success btnExportDetail"><i class="fas fa-file-export"></i></button>
 
-                                </form>
-                            </td>
-                            <td>@Html.DisplayFor(m => item.Stt)</td>
-                            <td>@Html.DisplayFor(m => item.Nguoixuatve)</td>
-                            <td id="tdChiNhanh">@Html.DisplayFor(m => item.Chinhanh)</td>
-                            <td>@Html.DisplayFor(m => item.Tuyentq)</td>
-                            <td>@Html.Raw(item.Doanhso.Value.ToString("N0"))</td>
-                            <td>@Html.Raw(item.Thucthu.Value.ToString("N0"))</td>
+                                        </form>
+                                    </td>
+                                    <td>@Html.DisplayFor(m => item.Stt)</td>
+                                    <td>@Html.DisplayFor(m => item.Nguoixuatve)</td>
+                                    <td id="tdChiNhanh">@Html.DisplayFor(m => item.Chinhanh)</td>
+                                    <td>@Html.DisplayFor(m => item.Tuyentq)</td>
+                                    <td>@Html.Raw(item.Doanhso.Value.ToString("N0"))</td>
+                                    <td>@Html.Raw(item.Thucthu.Value.ToString("N0"))</td>
 
-                        </tr>
+                                </tr>
                             }
                         }
                     </tbody>
@@ -196,5 +190,5 @@
             "autoWidth": false,
         });
     </script>
-    <script src="~/Admin/TheoTuyentq/theoTuyentqController.js"></script>
+    @*<script src="~/Admin/TheoTuyentq/theoTuyentqController.js"></script>*@
 }
