--- a/ThongKe/Views/BaoCao/TuyentqTheoNgayDi.cshtml
+++ b/ThongKe/Views/BaoCao/TuyentqTheoNgayDi.cshtml
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Doanh Thu Tuyến Tham Quan</h1>
+                <h1>BÁO CÁO DOANH THU TUYẾN THAM QUAN</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -41,41 +41,35 @@
                 <div class="p-4 border rounded">
 
                     <div class="form-group row">
-                        <div class="col-1">
-                            <label>Từ ngày</label>
-                        </div>
+
                         <div class="col-2">
+                            Từ ngày
                             <input value="@ViewBag.searchFromDate" name="tungay" class="form-control maskInput" id="txtTuNgay" />
                         </div>
 
-                        <div class="col-1">
-                            <label>Đến ngày</label>
-                        </div>
                         <div class="col-2">
+                            Đến ngày
                             <input value="@ViewBag.searchToDate" name="denngay" class="form-control maskInput" id="txtDenNgay" />
                         </div>
 
-
-                        <div class="col-1">
-                            <label>Code CN</label>
-                        </div>
                         <div class="col-2">
+                            Code CN
                             <select name="chiNhanh" class="form-control border-input ddlChiNhanh" id="ddlChiNhanh"
                                     asp-items="@(new SelectList(Model.ChiNhanhToReturnViewModels,"Name","Name", ViewBag.chiNhanh))">
                             </select>
                         </div>
 
-                        <div class="col-1">
-                            <label>Khối</label>
-                        </div>
-                        <div class="col-1">
+                        <div class="col-2">
+                            Khối
                             <select class="form-control" id="ddlKhoi" name="khoi"
                                     asp-items="@(new SelectList(Model.KhoiViewModels, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-2">
+                            <br />
                             <span class="btn-group">
+
                                 <button type="submit" id="btnSearch" class="btn btn-outline-primary" formaction="/BaoCao/TuyentqTheoNgayDi"><i class="fa fa-search"></i></button>
                                 <button type="submit" id="btnExportAll1" class="btn btn-outline-success" formmethod="post" formaction="/BaoCao/TuyentqTheoNgayDiPost"><i class="fas fa-file-export"></i></button>
                             </span>
@@ -114,8 +108,8 @@
             </div>
         </div>
         <div class="card-body">
-            <div>
-                <table class="table table-striped border" id="listAll">
+            <div style="overflow-x:auto;">
+                <table class="table mytable text-nowrap" id="listAll">
                     <thead>
                         <tr class="table-info">
                             <th>#</th>
@@ -134,42 +128,42 @@
                         {
                             @foreach (var item in Model.TuyentqNgaydis)
                             {
-                        <tr>
-                            <td>
-                                <form id="frmDetail" asp-action="TuyentqTheoNgayDiChiTietToExcel">
-                                    <input type="hidden" name="tungay" id="hidTuNgay" />
-                                    <input type="hidden" name="denngay" id="hidDenNgay" />
-                                    <input type="hidden" name="tuyentq" id="hidTuyentq" />
-                                    <input type="hidden" name="chinhanh" id="hidChiNhanh" />
-                                    <input type="hidden" name="khoi" id="hidKhoi" />
-                                    <button type="button" data-chinhanh="@item.Chinhanh" data-tuyentq="@item.Tuyentq" class="btn btn-outline btn-success btnExportDetail"><i class="fas fa-file-export"></i></button>
+                                <tr>
+                                    <td>
+                                        <form id="frmDetail" asp-action="TuyentqTheoNgayDiChiTietToExcel">
+                                            <input type="hidden" name="tungay" id="hidTuNgay" value="@Model.TuNgay" />
+                                            <input type="hidden" name="denngay" id="hidDenNgay" value="@Model.DenNgay" />
+                                            <input type="hidden" name="tuyentq" id="hidTuyentq" value="@item.Tuyentq" />
+                                            <input type="hidden" name="chinhanh" id="hidChiNhanh" value="@item.Chinhanh" />
+                                            <input type="hidden" name="khoi" id="hidKhoi" value="@Model.Khoi" />
+                                            <button type="submit" class="btn btn-outline-success btnExportDetail"><i class="fas fa-file-export"></i></button>
 
-                                </form>
-                            </td>
-                            <td>@Html.DisplayFor(m => item.Stt)</td>
-                            <td>@Html.DisplayFor(m => item.Chinhanh)</td>
-                            <td>@Html.DisplayFor(m => item.Tuyentq)</td>
-                            <td>@Html.DisplayFor(m => item.Khachht)</td>
-                            @if (item.Thucthuht.HasValue)
-                            {
-                                <td>@Html.Raw(item.Thucthuht.Value.ToString("N0"))</td>
-                            }
-                            else
-                            {
-                                <td>0</td>
-                            }
+                                        </form>
+                                    </td>
+                                    <td>@Html.DisplayFor(m => item.Stt)</td>
+                                    <td>@Html.DisplayFor(m => item.Chinhanh)</td>
+                                    <td>@Html.DisplayFor(m => item.Tuyentq)</td>
+                                    <td>@Html.DisplayFor(m => item.Khachht)</td>
+                                    @if (item.Thucthuht.HasValue)
+                                    {
+                                        <td>@Html.Raw(item.Thucthuht.Value.ToString("N0"))</td>
+                                    }
+                                    else
+                                    {
+                                        <td>0</td>
+                                    }
 
-                            <td>@Html.DisplayFor(m => item.Khachcu)</td>
-                            @if (item.Thucthucu.HasValue)
-                            {
-                                <td>@Html.Raw(item.Thucthucu.Value.ToString("N0"))</td>
-                            }
-                            else
-                            {
-                                <td>0</td>
-                            }
+                                    <td>@Html.DisplayFor(m => item.Khachcu)</td>
+                                    @if (item.Thucthucu.HasValue)
+                                    {
+                                        <td>@Html.Raw(item.Thucthucu.Value.ToString("N0"))</td>
+                                    }
+                                    else
+                                    {
+                                        <td>0</td>
+                                    }
 
-                        </tr>
+                                </tr>
                             }
                         }
                     </tbody>
@@ -211,5 +205,5 @@
             "autoWidth": false,
         });
     </script>
-    <script src="~/Admin/TuyentqTheoNgayDi/tuyentqTheoNgayDiController.js"></script>
+    @*<script src="~/Admin/TuyentqTheoNgayDi/tuyentqTheoNgayDiController.js"></script>*@
 }
