--- a/ThongKe/Views/Shared/_Layout.cshtml
+++ b/ThongKe/Views/Shared/_Layout.cshtml
@@ -21,12 +21,14 @@
     <link href="~/lib/jqueryui/jquery-ui.css" rel="stylesheet" />
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-    <style>
+    <link href="~/Images/LogoLeft.ico" rel="shortcut icon" />
+    <link href="~/css/site.css" rel="stylesheet" />
+    @*<style>
         .mypicture {
             width: 203px;
             height: 39px;
         }
-    </style>
+    </style>*@
 </head>
 <body class="hold-transition sidebar-mini text-sm sidebar-open" style="height: auto;">
 
@@ -35,7 +37,7 @@
         <!-- Navbar -->
 
         <nav class="main-header navbar navbar-expand navbar-dark" style="background-color:#3c8dbc">
-
+            <br />
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -88,10 +90,9 @@
 
         <footer class="main-footer">
             <div class="float-right d-none d-sm-block">
-                <b>Version</b> 3.0.0-rc.3
+                <b>Version</b> 1.0
             </div>
-            <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
-            reserved.
+            <strong><a href="/">Chương trình thống kê khách lẽ</a>.</strong>
         </footer>
 
         <!-- Control Sidebar -->
