--- a/ThongKe/Views/Login/Index.cshtml
+++ b/ThongKe/Views/Login/Index.cshtml
@@ -84,7 +84,7 @@
 
     <script src="~/AdminLTE/plugins/slimscroll/js/jquery.slimscroll.js"></script>
     <script src="~/AdminLTE/plugins/fastclick/js/fastclick.js"></script>
-    <script src="~/Scripts/Shared/_Layout.js"></script>
+    @*<script src="~/Scripts/Shared/_Layout.js"></script>*@
     <script src="~/AdminLTE/dist/js/app.js"></script>
 
     @*<script src="~/js/site.js"></script>*@
