--- a/ThongKe/Views/BaoCao/DoanTheoNgayDi.cshtml
+++ b/ThongKe/Views/BaoCao/DoanTheoNgayDi.cshtml
@@ -59,13 +59,13 @@
                             </select>
                         </div>
 
-                        <div class="col-2">
+                        @*<div class="col-2">
                             Khối
                             <select class="form-control" id="ddlKhoi" name="khoi"
                                     asp-items="@(new SelectList(Model.khoiViewModels, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
-
+*@
                         <div class="col-2">
                             <br />
                             <span class="btn-group">
