--- a/ThongKe/Views/BaoCao/KhachHuy.cshtml
+++ b/ThongKe/Views/BaoCao/KhachHuy.cshtml
@@ -62,7 +62,7 @@
                         <div class="col-2">
                             Khối
                             <select class="form-control" id="ddlKhoi" name="khoi"
-                                    asp-items="@(new SelectList(Model.KhoiViewModels, "Name", "Name", ViewBag.khoi))">
+                                    asp-items="@(new SelectList(Model.KhoiViewModels_KL, "Name", "Name", ViewBag.khoi))">
                             </select>
                         </div>
 
