--- a/ThongKe/Views/Shared/_Layout.cshtml
+++ b/ThongKe/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <!-- overlayScrollbars -->
     <link href="~/lib/datatables/css/dataTables.bootstrap4.css" rel="stylesheet" />
     <link href="~/lib/select2/css/select2.css" rel="stylesheet" />
+    <link href="~/lib/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" rel="stylesheet" />
     @*<link rel="stylesheet" href="~/lib/dist/css/adminlte.min.css">*@
     <link href="~/lib/dist/css/adminlte.min.css" rel="stylesheet" />
     <link href="~/lib/jqueryui/jquery-ui.css" rel="stylesheet" />
