--- a/ThongKe/Views/Users/Create.cshtml
+++ b/ThongKe/Views/Users/Create.cshtml
@@ -58,7 +58,7 @@
                             <input class="form-control" asp-for="User.Username" />
                             <span class="text-danger" asp-validation-for="User.Username"></span>
                         </div>
-                        
+
                         <div class="col-2">
                             <label asp-for="User.Hoten"></label>
                         </div>
@@ -141,6 +141,31 @@
 
                     </div>
 
+                    <div class="form-group row">
+
+                        <div class="col-2">
+                            <label asp-for="User.PhongBanQL"></label>
+                        </div>
+                        <div class="col-4">
+                            <input type="hidden" asp-for="User.PhongBanQL" id="hidDdlPhongBans" />
+                            <select class="phongBans select2-hidden-accessible" multiple="" data-placeholder="Chọn phòng ban" style="width: 100%;" data-select2-id="24" tabindex="-1" aria-hidden="true"
+                                    asp-items="@(new SelectList(Model.PhongBans, "Maphong", "Maphong"))" id="ddlPhongBanQL">
+                            </select>
+                            <span class="text-danger" asp-validation-for="User.PhongBanQL"></span>
+                        </div>
+
+                        <div class="col-2">
+                            <label asp-for="User.DaiLyQL"></label>
+                        </div>
+                        <div class="col-4">
+                            <select asp-for="User.DaiLyQL" class="form-control border-input "
+                                    asp-items="@(new SelectList(Model.Dmdailies,"Id","Daily"))">
+                            </select>
+                            <span class="text-danger" asp-validation-for="User.DaiLyQL"></span>
+                        </div>
+
+                    </div>
+
                     <div class="form-group ">
                         <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i></button>
                         <a class="btn btn-success" asp-action="Index"><i class="fas fa-backward"></i></a>
@@ -157,13 +182,26 @@
 
 </section>
 <!-- /.content -->
-
-
-
 @section Scripts{
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
 
     }
+    <script>
+        $('.phongBans').select2({
+
+            theme: 'bootstrap4'
+        });
+
+        // gan'  qua hidden field
+        $('.phongBans').on('change', function () {
+            phongBan = $(this).val();
+
+            $('#hidDdlPhongBans').val(phongBan);
+
+        });
+
+    </script>
 
 }
 
