--- a/ThongKe/Views/BaoCao/DoanhSoTheoSale.cshtml
+++ b/ThongKe/Views/BaoCao/DoanhSoTheoSale.cshtml
@@ -95,7 +95,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @if (Model.TourIBDTOs != null)
+                        @if (Model.TourIBDtosGroupByNguoiTaos != null)
                         {
                             @foreach (var vm in Model.TourIBDtosGroupByNguoiTaos)
                             {
